--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,12 @@
 * {
     font-family: "Roboto", sans-serif;
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 /* Main body */
 .dark {
     background-color: var(--bg);
     color: var(--text);
-    overflow-y: scroll;
 }
 
 /* Navigation bar */
